<resources>
    <string name="app_name">Invoice Pay</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_make_payment">Make Payment</string>
    <string name="request_from">Request from</string>
    <string name="request_date">22 March 2019</string>
    <string name="valid_date">24 March 2019</string>
    <string name="merchant_name">Indian Motors</string>
    <string name="UPI_ID">IndiaMotors@icici</string>
    <string name="verified_merchant">Verified merchant</string>
    <string name="valid_upto">Valid upto</string>
    <string name="title_activity_check_passcode">Confirm PIN</string>
    <string name="title_activity_view_invoice">View Invoice</string>
    <string name="title_activity_enter_upipin">Verify UPI PIN</string>
    <string name="title_activity_payment_success">Payment Success</string>
    <string name="title_activity_transaction">Transaction Screen</string>
    <string name="title_activity_Invoice_options">Invoice Options Screen</string>
    <string name="title_activity_contact">Select Contact</string>
    <string name="title_activity_add_line_items">Selected Items</string>
    <string name="title_activity_add_items">Add Items</string>
    <string name="title_activity_review_invoice">Review Invoice</string>
    <string name="title_activity_enter_upi">Enter Upi</string>
    <string name="title_activity_line_items">Create Line item</string>
    <string name="title_activity_create_invoice">Create Invoice</string>
    <string name="payment_successful">Payment Success</string>
    <string name="your_payment">Your payment of INR 650 is successfully completed</string>
    <string name="transaction_number">Transaction Number : 8742423442</string>
    <string name="done">Done</string>
    <string name="todo">TODO</string>
    <string name="invoice"><u>Invoice</u></string>
    <string name="title_verify_details">Verify Details</string>
    <string name="title_select_payment_type">Select Payment</string>
    <string name="merchant_address">Gala No. 112 Ground floor, Hello Park,\nPlot no. - A/28 Ind. Estate\nThane East - 123456</string>
    <string name="title_header_verify_details">Please verify your details</string>
    <string name="label_Name">Name:</string>
    <string name="value_name">Indian Motors</string>
    <string name="label_phone">Phone:</string>
    <string name="label_emailId">Email Id:</string>
    <string name="label_upiId">UPI Id:</string>
    <string name="label_address">Address:</string>
    <string name="footer_verify_details">Verify that the details are correct before proceeding, else contact us.</string>
    <string name="call_us">Call Us</string>
    <string name="Confirm">Confirm</string>
    <string name="title_payment_method_selection">UPI Id and Bank transfer are mandatory, \nyou can select if you want to add other available payment methods</string>
    <string name="title_optional_payment_selection">Tap the payment methods you want to add:</string>
    <string name="title_payment_billing_address_selection">Select billing Address</string>
    <string name="merchant_address_second">House no. 433, Kaspate Wasti \nPune \nMaharashtra</string>
    <string name="merchant_address_third">House no. 45, Model Colony \nJalandhar \nPunjab</string>
    <string name="invoice_customization_success">Congrats your invoice has been customized successfully, now go ahead and create an invoice</string>
    <string name="title_default_payment_methods">Default payment methods:</string>
    <string name="title_payment_selection_added">Additional payment methods:</string>
    <string name="title_invoice_start">Here you can customize, create and manage your invoice with ease.</string>

    <string name="invoiceLink"><![CDATA[<a href="http://yoyobilling.tk/BillingDashboard/nonICICIPayment.html">INVOICE LINK</a>]]></string>

    <string-array name="array_qty">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_GST">GSTIN</string>
    <string name="merchant_gstNo">123456789012345</string>
    <string name="customize_footer">Before creating invoice you will need to first customize it according to your requirement. \nPress continue to proceed.</string>
    <string name="title_customize_invoice">Customize Invoice</string>
    <string name="title_billing_address">Select Billing Address</string>
    <string name="title_invoice_success">Invoice Success</string>
    <string name="title_manage_invoice">Manage Invoice</string>
    <string name="title_send_invoice">Send Invoice</string>

</resources>
