<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:background="@color/grey"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/details_header"
        android:layout_width="match_parent"
        android:text="@string/title_header_verify_details"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/llName"
        android:layout_below="@id/details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_weight="0.7"
        android:text="@string/label_Name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:text="@string/value_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPhone"
        android:layout_below="@id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.7"
            android:text="@string/label_phone"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:text="8234567891"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_below="@id/llPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.7"
            android:text="@string/label_emailId"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:text="Indianmotors@gmail.com"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUpiId"
        android:layout_below="@id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.7"
            android:text="@string/label_upiId"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:text="indianmotors@icici"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddress"
        android:layout_below="@id/llUpiId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.7"
            android:text="@string/label_GST"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:text="@string/merchant_gstNo"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_above="@id/ll_Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/footer_verify_details"/>


    <LinearLayout
        android:id="@+id/ll_Confirm"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_CallUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            android:text="@string/call_us"/>

        <Button
            android:id="@+id/btn_Confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            android:text="@string/Confirm"/>



    </LinearLayout>

</RelativeLayout>