<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/header_payment_method"
        android:layout_width="match_parent"
        android:text="@string/title_payment_billing_address_selection"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_height="wrap_content" />


     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">

         <RadioButton
             android:layout_width="match_parent"
             android:text="@string/merchant_address"
             android:layout_height="wrap_content" />

         <RadioButton
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
             android:text="@string/merchant_address_second"
             android:layout_height="wrap_content" />

         <RadioButton
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
             android:text="@string/merchant_address_third"
             android:layout_height="wrap_content" />
     </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="Done"/>
</RelativeLayout>