<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_payment_method"
            android:layout_width="match_parent"
            android:text="Payment Methods"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_default_payment_methods"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="UPI id: nitesh@icici"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/icn_green_tick"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icn_upi"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/icn_upi"
            android:drawableRight="@drawable/icn_green_tick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Bank Transfer"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/icn_green_tick"
            android:drawableStart="@drawable/icn_bank_transfer"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/icn_bank_transfer"
            android:drawableRight="@drawable/icn_green_tick" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_payment_selection_added"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <RelativeLayout
            android:id="@+id/rl_cash"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icn_cash"
                android:layout_width="wrap_content"
                android:src="@drawable/icn_cash"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/txt_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icn_cash"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="Cash payment"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_toEndOf="@id/icn_cash" />

            <ImageView
                android:id="@+id/img_tick_cash"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:paddingTop="20dp"
                android:visibility="gone"
                android:src="@drawable/icn_green_tick"
                android:layout_height="wrap_content" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_qr"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icn_qr"
                android:layout_width="wrap_content"
                android:src="@drawable/icn_qr"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/txt_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icn_qr"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="Qr Code"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_toEndOf="@id/icn_qr" />

            <ImageView
                android:id="@+id/img_tick_qr"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:paddingTop="20dp"
                android:visibility="gone"
                android:src="@drawable/icn_green_tick"
                android:layout_height="wrap_content" />


        </RelativeLayout>

        <TextView
            android:id="@+id/header_billing_address"
            android:layout_width="match_parent"
            android:text="Billing Address"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:layout_height="wrap_content" />


        <RadioGroup
            android:id="@+id/rg_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/rbAddressFirst"
                android:layout_width="match_parent"
                android:text="@string/merchant_address"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rbAddressSecond"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/merchant_address_second"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rbAddressThird"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/merchant_address_third"
                android:layout_height="wrap_content" />
        </RadioGroup>

    </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="Update"/>
</RelativeLayout>